# tdd-fastapi

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: main.yml
project/: .dockerignore  Dockerfile  Dockerfile.prod  entrypoint.sh  pyproject.toml
project/app/: config.py  db.py  main.py
project/app/api/: crud.py  ping.py  summaries.py
project/app/models/: pydantic.py  tortoise.py
project/db/: Dockerfile
project/tests/: conftest.py  test_ping.py  test_summaries.py
