[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Zbigniew Żołnierowicz <zbigniew.zolnierowicz@saucelabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
asyncpg = "^0.27.0"
tortoise-orm = "^0.19.3"
aerich = "^0.7.1"
httpx = "^0.23.3"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
ignore = ["D100", "D101", "D103"]
